@@ -55,3 +55,5 @@ Version 1.3.0
 * RubyRange not requires Comparable objects to initialize anymore
 
 * Moved newRubyArray(), newRubyHash(), newRubyEnumerable(), newRubyRnumerator(), newRubyRange() to RubyCollections
+
+- Removed U(), X(), Ⴖ(), ㄍ(), ㄧ(), 十() from RubyArray
